k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: try-spring-oauth2
spec:
  selector:
    app: try-spring-oauth2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
